--- a/BISU-AMS-Desktop/StudentManagementForm.resx
+++ b/BISU-AMS-Desktop/StudentManagementForm.resx
@@ -193,7 +193,7 @@
         YII=
 </value>
   </data>
-  <metadata name="bw.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>292, 17</value>
+  <metadata name="bwgetstudents.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>194, 17</value>
   </metadata>
 </root>
