--- a/BISU-AMS-Desktop/BISU-AMS-Desktop/UserManagementForm.resx
+++ b/BISU-AMS-Desktop/BISU-AMS-Desktop/UserManagementForm.resx
@@ -217,4 +217,10 @@
         5atvx36zhjzLSBESLITB/QMgLpTXht/PJgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="bwUserSave.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>322, 17</value>
+  </metadata>
+  <metadata name="bwUserDelete.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>445, 17</value>
+  </metadata>
 </root>
